# VulkansEye

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
assets/backdrop/default/: backdrop.json
assets/backdrop/desert/: backdrop.json  radiance.dds
assets/backdrop/musichall/: backdrop.json
assets/backdrop/papermill/: backdrop.json  readme.txt
assets/backdrop/studio/: irradiance.dds  radiance.dds
assets/backdrops/default/: backdrop.json
assets/backdrops/desert/: backdrop.json  readme.txt
assets/backdrops/musichall/: backdrop.json
assets/backdrops/mutianyu/: backdrop.json  irradiance.dds
assets/backdrops/papermill/: backdrop.json  irradiance.dds  readme.txt
assets/configs/: backdrops.json  materials.json  meshes.json  player.json  scene.json  settings.json
assets/materials/.default/: material.json
assets/materials/concrete/: material.json
assets/materials/default/: ao.dds  diffuse.dds  metallic.dds  normal.dds
assets/materials/fabric/: material.json
assets/materials/hammeredcopper/: material.json
assets/materials/metalplate/: ao.dds  diffuse.dds  material.json  metallic.dds  normal.dds  roughness.dds
assets/materials/painted/: material.json
assets/materials/planks/: material.json
assets/materials/prismcrete/: material.json
assets/materials/rock/: material.json
assets/meshes/cube/: mesh.json
assets/meshes/default/: mesh.json
assets/meshes/floor/: floor.glb  mesh.json
assets/meshes/sphere/: mesh.json
assets/meshes/suzanne/: mesh.json  suzanne.glb
assets/meshes/table/: mesh.json  table.glb
assets/models/: cube.glb  cube.json  floor.json  suzanne.glb  suzanne.json  table.glb  table.json
assets/shaders/: backdrop.frag  backdrop.frag.spv  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv  shadow.frag  shadow.frag.spv  shadow.vert
headers/: Actor.hpp  Backdrop.hpp  Backdrops.hpp  Buffer.h  Buffer.hpp  Camera.h  Camera.hpp  Config.h  Engine.hpp  Framebuffer.hpp  HelloWorldTriangle.h  Helpers.h  Image.h  Image.hpp  Input.hpp  Light.h  Light.hpp  Material.h  Material.hpp  Materials.hpp  Mesh.h  Mesh.hpp  Meshes.hpp  Model.h  Model.hpp  Object.h  Overlay.hpp  Pipeline.hpp  Player.hpp  PointLight.hpp  RenderPass.hpp  Scene.h  Scene.hpp  Skybox.h  Skybox.hpp  Stage.hpp  State.h  State.hpp  Timer.h  Vertex.h  (+11 more)
include/: Backdrop.hpp  Backdrops.hpp  Buffer.hpp  Camera.hpp  Collection.hpp  Config.hpp  Engine.hpp  Framebuffer.hpp  Image.hpp  Input.hpp  Light.hpp  Material.hpp  Materials.hpp  Mesh.hpp  Meshes.hpp  Model.hpp  Object.hpp  Overlay.hpp  Pipeline.hpp  Player.hpp  RenderPass.hpp  Scene.hpp  State.hpp  Timer.hpp  Vertex.hpp  Vulkan.hpp  VulkansEye.hpp  Window.hpp  helpers.hpp
include/engine/: Allocation.hpp  Allocator.hpp  Debug.hpp  Device.hpp  Engine.hpp  Fence.hpp  Framebuffer.hpp  Image.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineCache.hpp  RenderPass.hpp  Semaphore.hpp  SwapChain.hpp  Vertex.hpp  Window.hpp
include/overlay/: Editor.hpp  Info.hpp  Overlay.hpp  Paused.hpp
resources/backdrop/desert/: irradiance.dds  radiance.dds  readme.txt
resources/configs/: backdrops.json  default.json  materials.json  meshes.json  player.json  scene.json  settings.json
resources/materials/White_marble_03/Textures_2K/: white_marble_03_2k_roughness2.tga
resources/models/: Duck.glb  floor.glb  skybox.mtl  sphere.glb  suzanne.glb  table.glb  table.mtl
resources/shaders/: backdrop.frag  backdrop.vert  backdrop.vert.spv  compile.bat  displacement.tesc  displacement.tesc.spv  displacement.tese  displacement.tese.spv  pointlightscene.frag  scene.frag  scene.frag.spv  scene.geom  scene.geom.spv  scene.tesc  scene.tesc.spv  scene.tese  scene.tese.spv  scene.vert  scene.vert.spv  shaders.vert  shadow.frag  shadow.frag.spv  shadow.geom  shadow.geom.spv  shadow.vert  shadow.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  skyboxvert.spv  sun.frag  sun.frag.spv  sun.vert  sun.vert.spv  vert.spv
resources/stage/: floor.mtl
src/: Actor.cpp  Backdrop.cpp  Backdrops.cpp  Buffer.cpp  Camera.cpp  Config.cpp  Engine.cpp  Framebuffer.cpp  HelloWorldTriangle.cpp  Image.cpp  Light.cpp  Material.cpp  Materials.cpp  Mesh.cpp  Meshes.cpp  Model.cpp  Object.cpp  Overlay.cpp  Pipeline.cpp  Player.cpp  PointLight.cpp  RenderPass.cpp  Scene.cpp  Skybox.cpp  Stage.cpp  State.cpp  VkBackend.cpp  VkEngine.cpp  VulkansEye.cpp  Window.cpp  main.cpp
src/engine/: Allocation.cpp  Allocator.cpp  Buffer.cpp  Debug.cpp  Device.cpp  Engine.cpp  Fence.cpp  Framebuffer.cpp  Image.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineCache.cpp  RenderPass.cpp  Semaphore.cpp  SwapChain.cpp  Window.cpp
src/overlay/: Editor.cpp  Info.cpp  Overlay.cpp  Paused.cpp  Zep.cpp
